--- a/cv.html
+++ b/cv.html
@@ -1,112 +1,156 @@
-    <!DOCTYPE html>
-    <html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Curriculum Vitae - Hengyi Yin</title>
-        <link rel="stylesheet" href="styles.css">
-        <!-- 可以添加 Google Fonts -->
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <!-- 内联主题脚本 -->
-        <script>
-            (function() {
-                try {
-                    const theme = localStorage.getItem('theme');
-                    if (theme) {
-                        document.documentElement.classList.add(theme);
-                    }
-                } catch (e) {
-                    console.error('Error applying theme:', e);
-                }
-            })();
-        </script>
-    </head>
-    <body>
-        <!-- 侧边栏 -->
-        <aside class="sidebar">
-            <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-            <h2>Hengyi Yin</h2>
-            <p><strong>B.Eng</strong></p>
-            <p><strong>McGill University</strong></p>
-            <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
-            <!-- 社交媒体链接 -->
-            <div class="social-links">
-                <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
-                <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a></strong>
-            </div>
-        </aside>
-
-        <header>
-            <!-- 导航链接 -->
-            <nav class="main-nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="cv.html">Curriculum Vitae</a></li>
-                    <li><a href="publications.html">Publications</a></li>
-                    <li><a href="projects.html">Projects</a></li> <!-- 新增项目链接 -->
-                </ul>
-            </nav>
-            <!-- 主题切换按钮 -->
-            <button id="theme-toggle">Switch to Dark Mode</button>
-        </header>
-
-        <div class="container">
-            <!-- 主要内容 -->
-            <main>
-                <!-- CV 内容 -->
-                <section id="cv">
-                    <h2>Curriculum Vitae</h2>
-                    
-                    <!-- 教育背景 -->
-                    <h3>Education</h3>
-                    <ul>
-                        <li>B.Eng. in Electrical Engineering, McGill University, 2025</li>
-                    </ul>
-
-                    <!-- 工作经历 -->
-                    <h3>Work Experience</h3>
-                    <ul class="work-experience">
-                        <li class="accordion-item">
-                            <button class="accordion-header">AI Engineer, Huawei Technologies Co., Ltd, Jun. 2024 -- Sep. 2024</button>
-                            <div class="accordion-content">
-                                <p><strong>Roles & Achievements:</strong></p>
-                                <ul>
-                                    <li>Participated in a prompt competition, fine-tuning methods using Retrieval-Augmented Generation, Supervised Fine-Tuning, Self-Code Collaboration, and Multi-Agent systems to enhance model performance.</li>
-                                    <li>Applied the above techniques to fine-tune the internal large language model, enabling issue diagnosis assistance, automated code review, and inspection functionality.</li>
-                                    <li>Developed automatic error code extraction tools to streamline debugging processes in Python, Go, and Java projects.</li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li class="accordion-item">
-                            <button class="accordion-header">Research Assistant, Central South University, School of Traffic & Transportation Engineering, Apr. 2023 -- Sep. 2023</button>
-                            <div class="accordion-content">
-                                <p><strong>Roles & Achievements:</strong></p>
-                                <ul>
-                                    <li>Developed machine learning prediction models in MATLAB and optimized them for better performance.</li>
-                                    <li>Conducted simulations to collect data and fine-tuned models using Simulink.</li>
-                                </ul>
-                            </div>
-                        </li>
-                        <!-- 可以继续添加更多实习经历 -->
-                    </ul>
-
-                    <!-- 技能 -->
-                    <h3>Skills</h3>
-                    <ul>
-                        <li>Programming Languages: Python, Java, C++</li>
-                        <li>Tools: Git, Docker, Google Cloud Platform, Jupyter Notebooks, PyCharm, Eclipse</li>
-                        <li>Frameworks: TensorFlow, PyTorch, Keras</li>
-                        <li>Libraries: OpenCV, Scikit-learn, Pandas, Transformers, NumPy, Matplotlib</li>
-                    </ul>
-                </section>
-            </main>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vitae - Hengyi Yin</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- 侧边栏部分 -->
+    <aside class="sidebar">
+        <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
+        <h2>Hengyi Yin</h2>
+        <p><strong>B.Eng</strong></p>
+        <p><strong>McGill University</strong></p>
+        <p><strong><a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
+        <div class="social-links">
+            <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
+            <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a></strong>
         </div>
-        <!--
-        <footer>
-            <p>&copy; 2024 Hengyi Yin. All rights reserved.</p>
-        </footer>
-        -->
-        <!-- JavaScript 脚本 -->
-        <script src="script.js"></script>
-    </body>
-    </html>
+    </aside>
+
+    <!-- 页头部分 -->
+    <header>
+        <!-- 导航链接 -->
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="publications.html">Publications</a></li>
+            </ul>
+        </nav>
+        <button id="theme-toggle">Switch to Dark Mode</button>
+    </header>
+
+    <div class="container">
+        <main>
+            <!-- 简历部分 -->
+            <section id="cv">
+                <h2>Curriculum Vitae</h2>
+
+                <!-- 教育背景 -->
+                <h3>Education</h3>
+                <ul>
+                    <li>Bachelor of Electrical Engineering, Minor in Economics, McGill University, Sep. 2021 – May 2025</li>
+                </ul>
+
+                <!-- 工作经历 -->
+                <h3>Work Experience</h3>
+                <ul class="work-experience">
+                    <!-- 手风琴组件项 -->
+                    <li class="accordion-item">
+                        <button class="accordion-header">AI Engineer, Huawei Technologies Co., Ltd, Jun. 2024 – Sep. 2024</button>
+                        <div class="accordion-content">
+                            <ul>
+                                <li>Enhanced company-specific LLM’s capabilities in code understanding, debugging, and document generation through techniques like Retrieval-Augmented Generation (RAG) and multi-agent systems, increasing debugging efficiency by 25%.</li>
+                                <li>Fine-tuned internal large language models to support 100K+ daily interactions for tasks such as error diagnosis and automated code review.</li>
+                                <li>Developed error code extraction scripts using Python, Java, and Go to streamline debugging processes, significantly improving efficiency.</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="accordion-item">
+                        <button class="accordion-header">Research Assistant, Central South University, Apr. 2023 – Sep. 2023</button>
+                        <div class="accordion-content">
+                            <ul>
+                                <li>Led Matlab optimization for a DC link capacitor estimation method, improving simulation accuracy by 15% under low sampling frequencies.</li>
+                                <li>Developed algorithms and conducted simulations in Simulink, contributing to high-quality peer-reviewed publications.</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+
+                <!-- 技术技能 -->
+                <h3>Technical Skills</h3>
+                <ul>
+                    <li>Programming Languages: Python, Java, C, MySQL, HTML/CSS</li>
+                    <li>Frameworks & Libraries: TensorFlow, PyTorch, Keras, Hugging Face, OpenCV, Scikit-learn, Pandas, NumPy, Matplotlib</li>
+                    <li>DevOps & Cloud: Docker, Kubernetes, AWS, GCP, Spark</li>
+                    <li>Developer Tools: Git, Jupyter Notebooks, PyCharm, Eclipse, VSCode</li>
+                </ul>
+
+                <!-- 项目经历 -->
+                <h3>Projects</h3>
+                <ul>
+                    <li>Developed an emotion classification system using BERT, achieving 91.35% accuracy and surpassing Naive Bayes baseline (80.15%). Deployed model for real-time sentiment analysis of customer feedback.</li>
+                    <li>Built an MLP classifier from scratch for MNIST/CIFAR-10 image classification, achieving significant accuracy improvements through custom network architecture design and optimization.</li>
+                    <li>Delivered a working prototype utilizing RAG, Sentence-Transformers, and semantic search in a hackathon, achieving 95%+ accuracy in contextual query retrieval.</li>
+                </ul>
+
+                <!-- 竞赛经历 -->
+                <h3>Competitions</h3>
+                <ul>
+                    <li>Achieved 3rd place among 76 teams in McGill CodeJam14 Hackathon, focusing on Large Language Model (LLM) applications.</li>
+                    <li>Delivered a prototype using RAG, Sentence-Transformers, and semantic search, achieving 95%+ accuracy in contextual query retrieval.</li>
+                    <li>Collaborated in a team of four, effectively distributing tasks and maintaining strong communication throughout the competition.</li>
+                </ul>
+            </section>
+        </main>
+    </div>
+
+    <!-- JavaScript 引入 -->
+    <script>
+    // 手风琴展开与关闭功能
+    document.querySelectorAll('.accordion-header').forEach(header => {
+        header.addEventListener('click', () => {
+            const accordionItem = header.parentElement;
+            const accordionContent = header.nextElementSibling;
+
+            // 如果当前项已经展开，关闭它
+            if (accordionItem.classList.contains('active')) {
+                accordionItem.classList.remove('active');
+                accordionContent.style.maxHeight = null;
+            } else {
+                // 展开当前项
+                accordionItem.classList.add('active');
+                accordionContent.style.maxHeight = accordionContent.scrollHeight + 'px';
+            }
+        });
+    });
+
+    // 主题切换功能
+    const themeToggleBtn = document.getElementById('theme-toggle');
+    const body = document.body;
+
+    function applyTheme(theme) {
+        if (theme === 'dark') {
+            body.classList.add('dark-theme');
+            themeToggleBtn.textContent = 'Switch to Light Mode';
+        } else {
+            body.classList.remove('dark-theme');
+            themeToggleBtn.textContent = 'Switch to Dark Mode';
+        }
+
+        // 强制刷新手风琴组件的颜色
+        document.querySelectorAll('.accordion-item').forEach(item => {
+            if (item.classList.contains('active')) {
+                item.querySelector('.accordion-content').style.maxHeight = item.querySelector('.accordion-content').scrollHeight + 'px';
+            }
+        });
+    }
+
+    // 检查用户首选的主题
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    applyTheme(savedTheme);
+
+    themeToggleBtn.addEventListener('click', () => {
+        const newTheme = body.classList.contains('dark-theme') ? 'light' : 'dark';
+        applyTheme(newTheme);
+        localStorage.setItem('theme', newTheme);
+    });
+
+    </script>
+    </script>
+</body>
+</html>
